fix: the onearena image in aboutus on mobile view for ourteam.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,7 +414,7 @@ footer h5{
     margin: 50px 0;
 }
 
-#about-oa{
+.about-oa{
     margin-left: 35%;
     
 }
